    builds.
24. Only show genre combo if we have some genres.
25. When parsing CUE files - attempt to load as UTF-8, and then "System"
    encoding. Support a new config item, 'cueFileCodecs', which allows extra
    Qt text-codecs to be tried (see README for details). If all of these fail,
    then revert back to the previous behaviour.

1.1.3
-----
 1. (Hopefully) fix selection order of items - and order added to playqueue.
 2. Updated translations: German, Spanish.
 3. Add Russian translation, thanks to Julia Dronova.
 4. Online services support does not require taglib.
 5. Fix changing of Music folder for 'Personal' mpd collection.
 6. Use QDesktopServices/QStandardPaths to ascertain default music folder for
    'Personal' collections.
 7. If no icon is to be used on a message-box button, then ensure the icon is
    cleared.
 8. Fix display of album year in playqueue for KDE builds.
 9. If we recieve an error from MPD via status, then display this in the main
    window.
10. Don't react twice to every volume change. Volume was changing in 10%
    increments, whereas it should have been (and is now) 5%
11. Bind increase volume, decrease volume, and mute actions to main window, so
    that shortcuts work.
12. Fix number display in replaygain dialog in Qt-only builds.
13. When reading default MPD music folder, ensure this has a trailing slash.
14. Only enable 'Edit Song Tags' on playqueue if MPD music folder is readable.
15. Slightly improve tag-guessing from tracks without tags. Now the following
    are acceptable:
    Artist/Album/TrackTitle.mp3
    Artist/Album/TrackNo TrackTitle.mp3
    Artist/Album/TrackNo-TrackTitle.mp3
    Artist/Album/TrackNo. TrackTitle.mp3
    Artist - Album/TrackTitle.mp3
    Artist - Album/TrackNo TrackTitle.mp3
    ...etc.
16. Fix artist and album genres.

1.1.2
-----
 1. Fix build due to broken translation files.
 2. After toggling various artists grouping, or group single tracks, update list
    of genres associated with artists.