@@ -148,8 +148,12 @@ if (TAGLIB_FOUND)
 endif (TAGLIB_FOUND)
 
 if (NOT WIN32 AND NOT APPLE)
-    set(CANTATA_SRCS ${CANTATA_SRCS} dbus/mpris.cpp dbus/gnomemediakeys.cpp devices/mountpoints.cpp dbus/powermanagement.cpp)
-    set(CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} dbus/mpris.h dbus/gnomemediakeys.h devices/mountpoints.h dbus/powermanagement.h)
+    if (NOT ENABLE_KDE)
+        set(CANTATA_SRCS ${CANTATA_SRCS} dbus/gnomemediakeys.cpp)
+        set(CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} dbus/gnomemediakeys.h)
+    endif (NOT ENABLE_KDE)
+    set(CANTATA_SRCS ${CANTATA_SRCS} dbus/mpris.cpp devices/mountpoints.cpp dbus/powermanagement.cpp)
+    set(CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} dbus/mpris.h devices/mountpoints.h dbus/powermanagement.h)
     set(CANTATA_SRCS ${CANTATA_SRCS} dbus/notify.cpp)
     set(CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} dbus/notify.h)
 endif (NOT WIN32 AND NOT APPLE)
@@ -189,7 +193,9 @@ endif (ENABLE_QT5)
 find_package(ZLIB REQUIRED)
 
 if (NOT WIN32 AND NOT APPLE)
-    set_SOURCE_FILES_PROPERTIES(dbus/org.gnome.SettingsDaemon.xml dbus/org.gnome.SettingsDaemon.MediaKeys.xml PROPERTIES NO_NAMESPACE TRUE)
+    if (NOT ENABLE_KDE)
+        set_SOURCE_FILES_PROPERTIES(dbus/org.gnome.SettingsDaemon.xml dbus/org.gnome.SettingsDaemon.MediaKeys.xml PROPERTIES NO_NAMESPACE TRUE)
+    endif (NOT ENABLE_KDE)
 
     if (ENABLE_QT5)
         qt5_add_dbus_adaptor(CANTATA_SRCS dbus/org.mpris.MediaPlayer2.Player.xml dbus/mpris.h Mpris)
@@ -216,9 +222,9 @@ if (NOT WIN32 AND NOT APPLE)
                 qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.freedesktop.Notifications.xml)
             endif ( (QT_VERSION_MINOR LESS 8) OR (QT_VERSION_MINOR EQUAL 8 AND QT_VERSION_PATCH LESS 4) )
             qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.freedesktop.UPower.xml)
+            qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.gnome.SettingsDaemon.xml)
+            qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.gnome.SettingsDaemon.MediaKeys.xml)
         endif (NOT ENABLE_KDE_SUPPORT)
-        qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.gnome.SettingsDaemon.xml)
-        qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.gnome.SettingsDaemon.MediaKeys.xml)
         qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.kde.Solid.PowerManagement.PolicyAgent.xml)
         qt4_add_dbus_interfaces(CANTATA_SRCS dbus/org.freedesktop.PowerManagement.Inhibit.xml)
     endif (ENABLE_QT5)
